추가된 내용
왓

--- a/yh/1.HTML
+++ b/yh/1.HTML
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script src="colors.js"></script>
     <title>WEB1 - html</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -29,6 +30,10 @@
        denoting structural semantics for text such as headings, paragraphs, lists,
         links, quotes and other items. HTML elements are delineated by tags, written
          using angle brackets.</p>
+
+         <div id="but">
+         <input type="button" value="night" onclick="change(this)">
+       </div>
        </div>
      </div>
   </body>
