--- a/JB/learn-vue-js-master/playground-complete/axios.html
+++ b/JB/learn-vue-js-master/playground-complete/axios.html
@@ -25,10 +25,11 @@
       methods: {
         getData: function() { 
           var vm = this;
+          console.log(this);
           axios.get('https://jsonplaceholder.typicode.com/users/')
             .then(function(response) {
               console.log(response.data);
-              vm.users = response.data;
+              //vm.users = response.data;
             })
             .catch(function(error) {
               console.log(error);
